# kolett

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sample_input.json  setup_grist_schema.py
configs/: dra.yaml  settings.yaml
src/kolett/: engine.py  main.py  protocol.py  runner.py  templating.py
src/kolett/plugins/: base.py
src/kolett/plugins/input/grist/: plugin.py
src/kolett/plugins/output/apprise/: plugin.py
src/kolett/plugins/output/email/: plugin.py
src/kolett/plugins/output/grist_update/: plugin.py
src/kolett/plugins/output/manifest/: manifest.md.j2  plugin.py
src/kolett/plugins/output/mattermost/: plugin.py
src/kolett/plugins/process/copy/: README.md  plugin.py
src/kolett/plugins/process/symlink/: README.md  plugin.py
src/kolett/plugins/process/tokenize/: plugin.py
templates/: manifest.md.j2
